<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              tools:context="com.example.pogoda.BlankFragment2" android:orientation="vertical">

    <!-- TODO: Update blank fragment layout -->


    <TextView
            android:text="@string/waiting_text"
            android:layout_width="170dp"
            android:textSize="50sp"
            android:layout_height="wrap_content" android:id="@+id/title2" android:layout_weight="1"/>
    <TextView
            android:text="@string/temperature"
            android:layout_width="168dp"
            android:layout_marginTop="10dp"
            android:textSize="25sp"
            android:layout_height="wrap_content" android:id="@+id/temperatura2" android:layout_weight="1"/>
    <TextView
            android:text="@string/waiting_for_data"
            android:layout_width="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="25sp"
            android:layout_height="wrap_content" android:id="@+id/temperaturaText2" android:layout_weight="1"/>

    <TextView
            android:text="@string/humidity"
            android:layout_width="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="25sp"
            android:layout_height="wrap_content" android:id="@+id/wilgotnoscText2" android:layout_weight="1"/>
    <TextView
            android:text="@string/waiting_for_data"
            android:layout_width="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="25sp"
            android:layout_height="wrap_content" android:id="@+id/wilgotnosc2" android:layout_weight="1"/>
    <TextView
            android:text="@string/windSpeed"
            android:layout_width="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="25sp"
            android:layout_height="wrap_content" android:id="@+id/predkoscText2" android:layout_weight="1"/>
    <TextView
            android:text="@string/waiting_for_data"
            android:layout_width="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="25sp"
            android:layout_height="wrap_content" android:id="@+id/predkosc2" android:layout_weight="1"/>

</LinearLayout>
